Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-18091

DevExpress Ribbon Notepad setup causes BSOD 0x1E

    XMLWordPrintable

Details

    Description

      Ribbon Notepad is a Dev Express sample of their Delphi controls library called VCL, it can be downloaded from https://go.devexpress.com/DevExpressDownload_VCLDemos.aspx and supports Windows XP and ReactOS

      If you try to open Ribbon Notepad setup, it takes a codepath inside our Win32k NtGdi, and crashes in the function ftGetFontUnicodeRanges, here we are not checking if the face->charmap is not zero.

      Attachments

        Issue Links

          Activity

            People

              Julcar Julcar
              Julcar Julcar
              Votes:
              2 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: