[NTGDI] - Check if face->charmap is not zero before accessing its encoding

This allows DevExpress Ribbon Notepad sample to start.

CORE-18091